# PyBE

./: __init__.py  bassetti_erskine.py  beam_pipe.py  environment.yml  example.ipynb  gaussian.py  pyproject.toml  test.py
PyBE/: __init__.py  gaussian.py  uniform.py
PyBE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyBE/validation/: beam_pipe_comparison.ipynb
examples/: example_1.ipynb  test.py
validation/: beam_pipe_comparison.ipynb  open_bc_comparison.ipynb
